Fix image does not fit on post

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -6,7 +6,11 @@
     border-radius: 6px;
     margin: 0 auto;
     padding: 16px;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+}
+
+img{
+    max-width: 100%;
 }
 
 .highlight{
